--- a/zh-docs/0.0 目录.md
+++ b/zh-docs/0.0 目录.md
@@ -1,6 +1,6 @@
 # Django 1.8.4发行版文档 #
 
-翻译：@Tuluobo
+翻译：[@Tuluobo](https://github.com/Tuluobo)
 
 Django软件基金会
 
@@ -11,8 +11,8 @@ Django软件基金会
 ----------
 1 Django文档
 	
-	1.1 获得帮助
-	1.2 第一步
+	1.1 获得帮助 翻译：[@Tuluobo](https://github.com/Tuluobo)
+	1.2 第一步 [@Tuluobo](https://github.com/Tuluobo)
 	1.3 模型层
 	1.4 视图层
 	1.5 模板层
@@ -29,47 +29,47 @@ Django软件基金会
 	1.16 Django开源项目
 2 开始
 
-	2.1 
-	2.2
-	2.3
-	2.4
-	2.5
-	2.6
-	2.7
-	2.8
-	2.9
-	2.10
-	2.11
+	2.1 Django一瞥
+	2.2 快速安装指南
+	2.3 编写自己的第一个Django App（1）
+	2.4 编写自己的第一个Django App（2）
+	2.5 编写自己的第一个Django App（3）
+	2.6 编写自己的第一个Django App（4）
+	2.7 编写自己的第一个Django App（5）
+	2.8 编写自己的第一个Django App（6）
+	2.9 高级教程：如何编写可重用的Apps
+	2.10 延伸阅读
+	2.11 编写你的第一个Django补丁
 3 Django使用
 
-	3.1
-	3.2
-	3.3
-	3.4
-	3.5
-	3.6
-	3.7
-	3.8
-	3.9
-	3.10
-	3.11
-	3.12
-	3.13
-	3.14
-	3.15
-	3.16
-	3.17
-	3.18
-	3.19
-	3.20
-	3.21
-	3.22
-	3.23
-	3.24
-	3.25
+	3.1 如何安装Django
+	3.2 模型和数据库
+	3.3 处理HTTP请求
+	3.4 使用表单
+	3.5 模板
+	3.6 基类视图
+	3.7 数据库迁移
+	3.8 文件管理
+	3.9 Django中的测试
+	3.10 在Django中使用认证
+	3.11 Django的缓存框架
+	3.12 条件视图处理
+	3.13 加密签名
+	3.14 发送邮件
+	3.15 国际化和本地化
+	3.16 “local flavor”插件
+	3.17 日志
+	3.18 分页
+	3.19 移植到Python3
+	3.20 Django中的安全
+	3.21 性能优化
+	3.22 序列化Django对象
+	3.23 Django设置项
+	3.24 信号量
+	3.25 系统校验框架
 4 “How-to”指南
 
-	4.1 使用REMOTE_USER进行身份认证
+	4.1 使用	`REMOTE_USER`进行身份认证
 	4.2 编写自定义的django-admin命令  
 	4.3 编写自定义的模型字段 
 	4.4 自定义查找
@@ -86,5 +86,71 @@ Django软件基金会
 	4.15 管理静态文件(CSS, images)
 	4.16 部署静态文件 
 	4.17 如何在Windows安装Django
-	4.18 编写数据库迁移 
+	4.18 编写数据库迁移
+5 Django FAQ
+
+	5.1 FAQ: 通用的常见问题
+	5.2 FAQ: 安装常见问题
+	5.3 FAQ: Django使用
+	5.4 FAQ: 获得帮助
+	5.5 FAQ: 数据库和模型
+	5.6 FAQ: 后台管理
+	5.7 FAQ: 贡献代码
+	5.8 发现错误
+6 API参考
+
+	6.1 应用App
+	6.2 系统校验框架
+	6.3 内置的基类视图API
+	6.4 点击劫持保护
+	6.5 `contrib`包
+	6.6 跨站请求伪造保护
+	6.7 数据库
+	6.8 `django-admin`和`manage.py`
+	6.9 在你的代码中运行管理命令
+	6.10 Django异常
+	6.11 文件处理
+	6.12 表单
+	6.13 中间件
+	6.14 数据库迁移操作
+	6.15 模型
+	6.16 `Request`和`response`对象
+	6.17 `SchemaEditor` 
+	6.18 设置项
+	6.19 信号量
+	6.20 模板
+	6.21 `TemplateResponse`和`SimpleTemplateResponse`
+	6.22 Unicode数据
+	6.23 `django.core.urlresolvers`实用方法
+	6.24 `django.conf.urls`使用方法
+	6.25 Django工具类
+	6.26 验证器
+	6.27 内置视图
+7 元文档和杂录
+
+	7.1 API稳定性
+	7.2 设计原则
+	7.3 Django的第三方分支
+8 术语表
+
+9 发行说明
+
+	9.1 最新发行版
+	9.2 安全发行版
+10 Django内部信息
+
+	10.1 为Django贡献代码
+	10.2 邮件列表
+	10.3 Django项目的组织
+	10.4 Django团队
+	10.5 角色
+	10.6 Django的安全策略
+	10.7 Django发行过程
+	10.8 Django弃用时间表
+	10.9 Django源代码库
+	10.10 Django是如何形成的? 
+
+11 索引，术语和表格
+
+Python模块索引
 
