--- a/zh-docs/第三章 Django 使用/3.2 模型与数据库.md
+++ b/zh-docs/第三章 Django 使用/3.2 模型与数据库.md
@@ -72,7 +72,7 @@
 - 当从一个字段渲染 HTML 时默认的 [widget](?)（例如 `<input type="text">,<select>`）。
 - 最小的验证要求，这用在 Django admin 自动生成的表单中。
 
-Django 自带几十个自带的字段类型，可以在[模型字段参考](?)中找到它们的完整列表。如果 Django 的内置字段类型不适用，你也可以很轻松地写自定义的字段类型，参见[编写自定义的模型字段](?)。
+Django 有几十个自带的字段类型，可以在[模型字段参考](?)中找到它们的完整列表。如果 Django 的内置字段类型不适用，你也可以很轻松地写自定义的字段类型，参见[编写自定义的模型字段](?)。
 
 #### 字段选项 ####
 每个特定的字段类型都含有一些它独有的参数（在[模型字段参考](?)中有所说明）。例如，`CharField`（和它的子类）需要一个 `max_length` 参数来指定对应数据库中的 `VARCHAR` 字段需要多大的空间来存储数据。
